# Control-Test-Platform

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  doxygen.cfg  doxygen_ode.cfg
doc/: index.html
misc/: compile.sh  eclipse-okamura-format.xml  environment.sh  ode-0.12.patch
odeutil/: Makefile.am  indicator.cpp  indicator.h  inroffield.cpp  inroffield.h  marker.cpp  marker.h  normal.cpp  normal.h  obstaclefield.cpp  obstaclefield.h  odeutil.cpp  odeutil.h  platform.cpp  platform.h  readme.h  roller.h
samples/: Makefile.am
samples/normal-robot/: .gitignore  Makefile.am  inrofkey  inrofkey.cpp  normalkey.cpp  obstaclekey  obstaclekey.cpp
samples/roller-robot/: .gitignore  Makefile.am  Makefile.in  key_controller.c  onoff_controller.c  slope_p.cpp  slope_pd.cpp  slope_pid.cpp  slope_roller.cpp  slope_roller.h  slopekey.cpp  slopeonoff.cpp  slopetemplate.cpp  template_controller.c
samples/template/: .gitignore  Makefile.in  sample
samples/two-dimension-pid/: .gitignore  Makefile.am  obstacle_follow.cpp  obstacle_follow_real.cpp  obstacle_static.cpp  obstacletemplate.cpp  obstacletemplate_real.cpp
src/: Doxyfile  Makefile.am  Makefile.in  OdeDoxyfile  marker.h  odeutil.cpp  readme.h  roller.cpp  slopefield.cpp  slopefield.h
